# naivertc

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/Modules/: FindLibNice.cmake
configs/: mbedtls_config.h  mbedtls_config_dtls_srtp.h
examples/common_examples/: CMakeLists.txt
examples/common_examples/include/: sdp_description_examples.hpp  task_queue_examples.hpp  volatile_examples.hpp
examples/common_examples/src/: main.cpp  sdp_description_examples.cpp  task_queue_examples.cpp  volatile_examples.cpp  websocket_client_sync_ssl.cpp
examples/common_tests/: CMakeLists.txt
examples/common_tests/src/: main.cpp  task_queue_tests.cpp
examples/signaling/: CMakeLists.txt
examples/signaling/src/base/: websocket.cpp  websocket.hpp
examples/signaling/src/channels/: ayame_channel.cpp  ayame_channel.hpp  ayame_client.cpp  ayame_client.hpp  base_channel.cpp  base_channel.hpp  signaling_channel.cpp  signaling_channel.hpp  signaling_client.cpp  signaling_client.hpp
examples/signaling/src/components/: websocket.cpp  websocket.hpp
examples/signaling/src/utils/: url_parts.hpp
examples/signaling_server_python/: signaling_server.py
examples/streamer/: CMakeLists.txt
examples/streamer/include/: client.hpp
examples/streamer/include/stream/: h264_file_stream_source.hpp  media_file_stream_source.hpp  media_stream_source.hpp
examples/streamer/samples/: generate_h264.py
examples/streamer/samples/h264/: sample-0.h264  sample-1.h264  sample-10.h264  sample-100.h264  sample-101.h264  sample-102.h264  sample-103.h264  sample-104.h264  sample-105.h264  sample-106.h264  sample-107.h264  sample-108.h264  sample-109.h264  sample-11.h264  sample-110.h264  sample-111.h264  sample-112.h264  sample-113.h264  sample-114.h264  sample-115.h264  sample-116.h264  sample-117.h264  sample-118.h264  sample-119.h264  sample-12.h264  sample-120.h264  sample-121.h264  sample-122.h264  sample-123.h264  sample-124.h264  sample-125.h264  sample-126.h264  sample-127.h264  sample-128.h264  sample-129.h264  sample-13.h264  sample-130.h264  sample-131.h264  sample-132.h264  sample-133.h264  (+880 more)
examples/streamer/src/: client.cpp  client.hpp  client_peer_connection.cpp  client_signaling_delegate.cpp  main.cpp
examples/streamer/src/stream/: h264_file_stream_source.cpp  h264_file_stream_source.hpp  media_file_stream_source.cpp  media_file_stream_source.hpp  media_stream_source.hpp
examples/streamer/web_receiver/: index.html  peer.js
include/base/: certificate.hpp  defines.hpp  init.hpp  internals.hpp  packet.hpp  proxy.hpp  system_time.hpp  task_queue.hpp  tls.hpp
include/common/: array_view.hpp  defines.hpp  instance_guard.hpp  logger.hpp  numeric_range_checker.hpp  proxy.hpp  str_utils.hpp  task_queue.hpp  utils.hpp  utils_numeric.hpp  utils_random.hpp  utils_string.hpp  utils_time.hpp  weak_ptr_manager.hpp
include/pc/: candidate.hpp  configuration.hpp  ice_transport.hpp  peer_connection.hpp  peer_connection_configuration.hpp  peer_connection_impl.hpp  sdp_defines.hpp  sdp_entry.hpp  sdp_serializer.hpp  sdp_session_description.hpp  transport.hpp
include/pc/channels/: channel.hpp  data_channel.hpp  media_channel.hpp
include/pc/media/: h264_media_track.hpp  media_track.hpp  opus_media_track.hpp
include/pc/rtp_rtcp/: rtp_defines.hpp  rtp_packet.hpp
include/pc/sdp/: candidate.hpp  sdp_defines.hpp  sdp_entry.hpp  sdp_entry_application.hpp  sdp_entry_media.hpp  sdp_entry_media_audio.hpp  sdp_entry_media_video.hpp  sdp_session_description.hpp
include/pc/transports/: dtls_srtp_transport.hpp  dtls_transport.hpp  ice_transport.hpp  sctp_message.hpp  sctp_packet.hpp  sctp_transport.hpp  sctp_transport_usr_sctp_settings.hpp  transport.hpp
include/rtc/base/: bit_io.hpp  bit_io_reader.hpp  bit_io_writer.hpp  bit_rate_statistics.hpp  bit_reader.hpp  byte_io.hpp  byte_io_reader.hpp  byte_io_writer.hpp  clock.hpp  clock_real_time.hpp  copy_on_write_buffer.hpp  dscp.hpp  internals.hpp  ntp_time.hpp  ntp_time_util.hpp  packet.hpp  packet_options.hpp  (+6 more)
include/signaling/: base_channel.hpp  url_parts.hpp  websocket.hpp
lib_deps/macos/: VERSION  fetch_boost.sh  install_deps.sh
src/base/: attributes_checker.hpp  certificate.cpp  certificate.hpp  certificate_unittest.cpp  defines.hpp  features_checker.hpp  init.cpp  init.hpp  mbedtls.hpp  openssl.hpp  packet.cpp  packet_unittest.cpp  system_time.cpp  system_time.hpp  system_time_unittest.cpp  task_queue.cpp  thread_annotation.hpp  thread_annotation_unittest.cpp  tls.cpp  tls.hpp  tls_mbedtls.cpp  tls_openssl.cpp
src/common/: array_size.hpp  array_view.hpp  event.cpp  event.hpp  event_posix.cpp  event_unittest.cpp  event_win.cpp  instance_guard.cpp  logger.cpp  logger.hpp  proxy.hpp  str_utils.cpp  task_queue.cpp  task_queue.hpp  task_queue_unittest.cpp  thread_local_storage.cpp  thread_local_storage.hpp  thread_utils.cpp  thread_utils.hpp  utils.cpp  utils_network.cpp  utils_network.hpp  utils_numeric.hpp  utils_random.cpp  utils_random.hpp  utils_string.cpp  utils_string.hpp  utils_time.cpp  utils_time.hpp  weak_ptr_manager.cpp  weak_ptr_manager.hpp  weak_ptr_manager_unittest.cpp
src/pc/: candidate.cpp  candidate_unittest.cpp  configuration.cpp  configuration_unittest.cpp  ice_transport.cpp  peer_connection.cpp  peer_connection_configuration.cpp  peer_connection_configuration_unittest.cpp  peer_connection_dtls_transport_delegate.cpp  peer_connection_ice_transport_delegate.cpp  peer_connection_ice_transport_slots.cpp  peer_connection_impl.cpp  peer_connection_media_handler.cpp  peer_connection_sctp_transport_delegate.cpp  peer_connection_sdp_offer_answer.cpp  sdp_defines.cpp  sdp_entry.cpp  sdp_serializer.cpp  sdp_session_description.cpp  transport.cpp
src/signaling/: base_channel.cpp  websocket.cpp
src/testing/: defines.hpp  gtest_main.cpp  simulated_clock.cpp  simulated_clock.hpp  simulated_sequence_runner.hpp  simulated_task_queue.cpp  simulated_task_queue.hpp  simulated_time_controller.cpp  simulated_time_controller.hpp  simulated_time_controller_unittest.cpp
testing/: gtest_main.cpp  unittest_defines.hpp
(+1249 files in other folders)
